feat(auth): login api user via sanctum + handling response data + exceptions for same response
