# resources/lang/id/validation.php
@@ -1,0 +1,161 @@
+<?php
+
+return [
+    /*
+    |--------------------------------------------------------------------------
+    | Validation Language Lines
+    |--------------------------------------------------------------------------
+    |
+    | The following language lines contain the default error messages used by
+    | the validator class. Some of these rules have multiple versions such
+    | as the size rules. Feel free to tweak each of these messages here.
+    |
+    */
+
+    'accepted' => ':attribute harus diterima.',
+    'accepted_if' => ':attribute harus diterima ketika :other adalah :value.',
+    'active_url' => ':attribute bukan URL yang valid.',
+    'after' => ':attribute harus berupa tanggal setelah :date.',
+    'after_or_equal' => ':attribute harus berupa tanggal setelah atau sama dengan :date.',
+    'alpha' => ':attribute hanya boleh berisi huruf.',
+    'alpha_dash' => ':attribute hanya boleh berisi huruf, angka, tanda hubung, dan garis bawah.',
+    'alpha_num' => ':attribute hanya boleh berisi huruf dan angka.',
+    'array' => ':attribute harus berupa array.',
+    'before' => ':attribute harus berupa tanggal sebelum :date.',
+    'before_or_equal' => ':attribute harus berupa tanggal sebelum atau sama dengan :date.',
+    'between' => [
+        'numeric' => ':attribute harus antara :min dan :max.',
+        'file' => ':attribute harus antara :min dan :max kilobytes.',
+        'string' => ':attribute harus antara :min dan :max karakter.',
+        'array' => ':attribute harus antara :min dan :max item.',
+    ],
+    'boolean' => 'Isian :attribute harus benar atau salah.',
+    'confirmed' => 'Konfirmasi :attribute tidak cocok.',
+    'current_password' => 'Kata sandi tidak benar.',
+    'date' => 'Isian :attribute bukan tanggal yang valid.',
+    'date_equals' => ':Attribute harus sama dengan tanggal :date.',
+    'date_format' => 'Isian :attribute tidak sesuai dengan format :format.',
+    'declined' => 'Isian :attribute harus ditolak.',
+    'declined_if' => 'Isian :attribute harus ditolak ketika :other adalah :value.',
+    'different' => ':Attribute dan :other harus berbeda.',
+    'digits' => 'Isian :attribute harus :digits digit.',
+    'digits_between' => 'Isian :attribute harus antara :min dan :max digit.',
+    'dimensions' => ':attribute memiliki dimensi gambar yang tidak valid.',
+    'distinct' => 'Isian :attribute memiliki nilai yang duplikat.',
+    'email' => 'Isian :attribute harus berupa alamat email yang valid.',
+    'ends_with' => 'Isian :attribute harus diakhiri dengan salah satu dari berikut: :values.',
+    'enum' => ':Attribute yang dipilih tidak valid.',
+    'exists' => ':Attribute yang dipilih tidak valid.',
+    'file' => 'Isian :attribute harus berupa file.',
+    'filled' => 'Isian :attribute harus memiliki nilai.',
+    'gt' => [
+        'numeric' => ':attribute harus lebih besar dari :value.',
+        'file' => ':attribute harus lebih besar dari :value kilobytes.',
+        'string' => ':attribute harus lebih besar dari :value karakter.',
+        'array' => ':attribute harus memiliki lebih dari :value item.',
+    ],
+    'gte' => [
+        'numeric' => ':attribute harus lebih besar atau sama dengan :value.',
+        'file' => ':attribute harus lebih besar atau sama dengan :value kilobytes.',
+        'string' => ':attribute harus lebih besar atau sama dengan :value karakter.',
+        'array' => ':attribute harus memiliki :value item atau lebih.',
+    ],
+    'image' => ':attribute harus berupa gambar.',
+    'in' => ':attribute yang dipilih tidak valid.',
+    'in_array' => 'Nilai :attribute tidak ada dalam :other.',
+    'integer' => ':attribute harus berupa bilangan bulat.',
+    'ip' => ':attribute harus berupa alamat IP yang valid.',
+    'ipv4' => ':attribute harus berupa alamat IPv4 yang valid.',
+    'ipv6' => ':attribute harus berupa alamat IPv6 yang valid.',
+    'json' => ':attribute harus berupa string JSON yang valid.',
+    'lt' => [
+        'numeric' => ':attribute harus kurang dari :value.',
+        'file' => ':attribute harus kurang dari :value kilobytes.',
+        'string' => ':attribute harus kurang dari :value karakter.',
+        'array' => ':attribute harus memiliki kurang dari :value item.',
+    ],
+    'lte' => [
+        'numeric' => ':attribute harus kurang dari atau sama dengan :value.',
+        'file' => ':attribute harus kurang dari atau sama dengan :value kilobytes.',
+        'string' => ':attribute harus kurang dari atau sama dengan :value karakter.',
+        'array' => ':attribute tidak boleh memiliki lebih dari :value item.',
+    ],
+    'mac_address' => ':attribute harus berupa alamat MAC yang valid.',
+    'max' => [
+        'numeric' => ':attribute tidak boleh lebih besar dari :max.',
+        'file' => ':attribute tidak boleh lebih besar dari :max kilobytes.',
+        'string' => ':attribute tidak boleh lebih besar dari :max karakter.',
+        'array' => ':attribute tidak boleh memiliki lebih dari :max item.',
+    ],
+    'mimes' => ':attribute harus berupa file dengan tipe: :values.',
+    'mimetypes' => ':attribute harus berupa file dengan tipe: :values.',
+    'min' => [
+        'numeric' => ':attribute harus memiliki nilai minimal :min.',
+        'file' => ':attribute harus memiliki ukuran minimal :min kilobytes.',
+        'string' => ':attribute harus memiliki panjang minimal :min karakter.',
+        'array' => ':attribute harus memiliki minimal :min item.',
+    ],
+    'multiple_of' => 'Nilai :attribute harus merupakan kelipatan dari :value.',
+    'not_in' => ':attribute yang dipilih tidak valid.',
+    'not_regex' => 'Format :attribute tidak valid.',
+    'numeric' => ':attribute harus berupa angka.',
+    'password' => 'Kata sandi salah.',
+    'present' => 'Kolom :attribute harus ada.',
+    'prohibited' => 'Kolom :attribute tidak diizinkan.',
+    'prohibited_if' => 'Kolom :attribute tidak diizinkan jika :other adalah :value.',
+    'prohibited_unless' => 'Kolom :attribute tidak diizinkan kecuali :other ada dalam :values.',
+    'prohibits' => 'Kolom :attribute melarang :other hadir.',
+    'regex' => 'Format :attribute tidak valid.',
+    'required' => 'Kolom :attribute wajib diisi.',
+    'required_array_keys' => 'Kolom :attribute harus memuat entri untuk: :values.',
+    'required_if' => 'Kolom :attribute wajib diisi ketika :other adalah :value.',
+    'required_unless' => 'Kolom :attribute wajib diisi kecuali :other ada dalam :values.',
+    'required_with' => 'Kolom :attribute wajib diisi ketika :values hadir.',
+    'required_with_all' => 'Kolom :attribute wajib diisi ketika :values hadir.',
+    'required_without' => 'Kolom :attribute wajib diisi ketika :values tidak hadir.',
+    'required_without_all' => 'Kolom :attribute wajib diisi ketika tidak ada dari :values hadir.',
+    'same' => ':attribute dan :other harus sama.',
+    'size' => [
+        'numeric' => ':attribute harus memiliki ukuran :size.',
+        'file' => ':attribute harus memiliki ukuran :size kilobytes.',
+        'string' => ':attribute harus memiliki panjang :size karakter.',
+        'array' => ':attribute harus memiliki :size item.',
+    ],
+    'starts_with' => ':attribute harus dimulai dengan salah satu dari yang berikut: :values.',
+    'string' => ':attribute harus berupa teks.',
+    'timezone' => ':attribute harus merupakan zona waktu yang valid.',
+    'unique' => ':attribute sudah digunakan sebelumnya.',
+    'uploaded' => ':attribute gagal diunggah.',
+    'url' => 'Format :attribute tidak valid.',
+    'uuid' => ':attribute harus merupakan UUID yang valid.',
+
+    /*
+    |--------------------------------------------------------------------------
+    | Custom Validation Language Lines
+    |--------------------------------------------------------------------------
+    |
+    | Here you may specify custom validation messages for attributes using the
+    | convention "attribute.rule" to name the lines. This makes it quick to
+    | specify a specific custom language line for a given attribute rule.
+    |
+    */
+
+    'custom' => [
+        'attribute-name' => [
+            'rule-name' => 'custom-message',
+        ],
+    ],
+
+    /*
+    |--------------------------------------------------------------------------
+    | Custom Validation Attributes
+    |--------------------------------------------------------------------------
+    |
+    | The following language lines are used to swap our attribute placeholder
+    | with something more reader friendly such as "E-Mail Address" instead
+    | of "email". This simply helps us make our message more expressive.
+    |
+    */
+
+    'attributes' => [],
+];
